fixed app overflow

--- a/src/styles/ui-fits.scss
+++ b/src/styles/ui-fits.scss
@@ -15,12 +15,6 @@
  * limitations under the License.
  */
 
- .main-container {
-    overflow: hidden;
- }
-  @media (max-width: 767px) {
-   
-  }
-  @media (min-width: 768px) {
-  }
-  
+.main-container {
+  overflow: hidden;
+}
